@@ -1,7 +1,7 @@
 ## Process this file with automake to produce Makefile.in
 
-EXTRA_DIST = config.rpath BUGS zvbi.spec.in zvbi.spec autogen.sh depcomp
+EXTRA_DIST = config.rpath BUGS zvbi.spec.in zvbi.spec depcomp
 
 DISTCLEANFILES = site_def.h
 
-SUBDIRS = m4 src po test doc contrib
+SUBDIRS = src po test doc contrib
