@@ -1,3 +1,7 @@
+2002-07-04	<mschimek@users.sf.net>
+
+	* doc, src: Switched to Doxygen.
+
 2002-06-22	<mschimek@users.sf.net>
 
 	* doc/Makefile.am: Modified to permit building libzvbi in
